Update jupyter notebook and html files

--- a/SageMaker Project.html
+++ b/SageMaker Project.html
@@ -15217,6 +15217,9 @@ Starting  neg  files
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><strong>Answer:</strong></p>
+<p>"would love to see it again!" - Positive</p>
+<p>"never again" - Negative</p>
+<p>"amazing image, but the plot was awful" - Negative</p>
 
 </div>
 </div>
